# stocksage

./: .gitignore  README.md
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt  run.py
backend/agents/: base.py  market_data.py  router.py
backend/api/: chat.py  ws.py
backend/core/: event_bus.py  llm_provider.py
backend/data/: __init__.py  cache.py
backend/data/providers/: __init__.py  tushare_provider.py
backend/graph/: graph_builder.py  router.py  state.py
backend/graph/nodes/: common.py  dispatcher_node.py  fundamental_node.py  industry_node.py  macro_node.py  market_data_node.py  news_node.py  report_node.py  risk_node.py  router_node.py  synthesis_node.py  technical_node.py
backend/tests/: conftest.py  test_cache.py  test_config.py  test_graph.py  test_market_data_agent.py  test_planner.py  test_state.py  test_tushare_provider.py
docs/: SPEC.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  index.css
frontend/src/components/Agent/: AgentStatus.vue
frontend/src/components/App/: AppShell.vue
frontend/src/components/Chat/: ChatContainer.vue  ChatInput.vue  ChatMessage.vue
frontend/src/composables/: agents.ts  useSSE.ts  useWebSocket.ts
